--- a/.air.toml
+++ b/.air.toml
@@ -8,7 +8,7 @@ tmp_dir = "tmp"
 
 [build]
 # Just plain old shell command. You could use `make` as well.
-cmd = "go mod tidy && go build -o ./tmp/main main.go"
+cmd = "go mod tidy && go build -o ./tmp/main frontend/main.go"
 # Binary file yields from `cmd`.
 bin = "tmp/main"
 # Customize binary.
