--- a/.github/workflows/coveritup.yml
+++ b/.github/workflows/coveritup.yml
@@ -55,18 +55,22 @@ jobs:
           command: cd frontend; npm run build
           record: runtime
 
-      - name: Go Build
+      - name: Go Build CLI
         uses: kevincobain2000/action-coveritup@v2
         with:
-          type: go-build-time
-          command: go mod tidy;go build -ldflags '-s -w' -o main main.go
+          type: go-build-cli-time
+          command: go mod tidy;go build -ldflags '-s -w' -o main frontend/main.go
+          record: runtime
+
+      - name: Go Build All
+        uses: kevincobain2000/action-coveritup@v2
+        with:
+          type: go-build-all-time
+          command: go mod tidy;go build
           record: runtime
 
       - name: Lint Errors
-        uses: kevincobain2000/action-coveritup@v2
-        with:
-          type: go-lint-errors
-          command: golangci-lint run ./... | grep  -c "\^"
+        run: golangci-lint run ./...
 
       - name: Test
         uses: kevincobain2000/action-coveritup@v2
