--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,20 +5,21 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "check": "astro check",
+    "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.2",
+    "@astrojs/check": "^0.9.3",
     "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.13.2",
+    "astro": "^4.15.4",
     "astro-single-file": "^1.1.0",
     "html-minifier-terser": "^7.2.0",
-    "tailwindcss": "^3.4.9",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
   },
   "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "4.20.0"
+    "@rollup/rollup-linux-x64-gnu": "4.21.2"
   }
 }
