--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -11,6 +11,9 @@
       ]
     },
     "jsx": "react-jsx",
-    "jsxImportSource": "react"
-  }
+    "jsxImportSource": "react",
+  },
+  "exclude": [
+    "src/components/Alpine.astro",
+  ]
 }
