--- a/.github/workflows/coveritup.yml
+++ b/.github/workflows/coveritup.yml
@@ -49,10 +49,7 @@ jobs:
           record: runtime
 
       - name: Astro Check
-        uses: kevincobain2000/action-coveritup@v2
-        with:
-          type: astro-warnings
-          command: cd frontend; npm run check
+        run: cd frontend; npm run check
 
       - name: NPM Build
         uses: kevincobain2000/action-coveritup@v2
